# pythonProject

./: README.md  pyproject.toml
src/: functions.py  main.py
tests/: conftest.py  test_functions.py  test_operations.json
